# libshv

./: .clang-tidy  .gitignore  .gitmodules  .qmake.conf  CMakeLists.txt  README.md  libshv.pro  subproject_integration.pri
libshvbroker/: CMakeLists.txt  libshvbroker.pro
libshvbroker/src/: aclmanager.cpp  aclmanager.h  aclmanagersqlite.cpp  aclmanagersqlite.h  aclmountdef.cpp  aclmountdef.h  aclpassword.cpp  aclpassword.h  aclrole.cpp  aclrole.h  aclroleaccessrules.cpp  aclroleaccessrules.h  aclrolepaths.cpp  aclrolepaths.h  acluser.cpp  acluser.h  appclioptions.cpp  appclioptions.h  azureconfig.h  brokeraclnode.cpp  brokeraclnode.h  brokerapp.cpp  brokerapp.h  brokerappnode.cpp  brokerappnode.h  brokerconfigfilenode.cpp  brokerconfigfilenode.h  brokernode.cpp  brokernode.h  brokerrootnode.cpp  brokerrootnode.h  clientconnectionnode.cpp  clientconnectionnode.h  clientshvnode.cpp  clientshvnode.h  currentclientshvnode.cpp  currentclientshvnode.h  groupmapping.h  ldap.cpp  ldapconfig.h  (+8 more)
libshvbroker/src/rpc/: brokerclientserverconnection.cpp  brokerclientserverconnection.h  brokertcpserver.cpp  brokertcpserver.h  clientbrokerconnection.cpp  clientbrokerconnection.h  clientconnection.cpp  clientconnection.h  clientconnectiononbroker.cpp  clientconnectiononbroker.h  commonrpcclienthandle.cpp  commonrpcclienthandle.h  masterbrokerclientconnection.cpp  masterbrokerclientconnection.h  masterbrokerconnection.cpp  masterbrokerconnection.h  rpc.pri  serverconnectionbroker.cpp  serverconnectionbroker.h  slavebrokerclientconnection.cpp  slavebrokerclientconnection.h  ssl_common.cpp  ssl_common.h  websocket.cpp  websocket.h  websocketserver.cpp  websocketserver.h
libshvbroker/tests/: test_aclmanager.cpp
libshvchainpack/: CMakeLists.txt  libshvchainpack.pro
libshvchainpack/c/: CMakeLists.txt  c.pri  cchainpack.c  cchainpack.h  ccpcp.c  ccpcp.h  ccpcp_convert.c  ccpcp_convert.h  ccpon.c  ccpon.h  pack_double.c  pack_double.h
libshvchainpack/c/proof-of-concept-code/: pack_double.c
libshvchainpack/c/tests/: test_ccpcp.c
libshvchainpack/d/: dcp2cp.d  rndgen.d  tst.d  tst_log.d  tst_reader.d  tst_ref.d  tst_rpcmessage.d  tst_rpcvalue.d
libshvchainpack/d/shv/: chainpack.d  cpon.d  log.d  rpcmessage.d  rpctype.d  rpcvalue.d
libshvchainpack/fuzz/: README.md  fromChainpack.cpp  fromCpon.cpp
libshvchainpack/js/: bint.js  chainpack.js  cpcontext.js  cpon.js  index.html  rpcmessage.js  rpcvalue.js  test.html  test.js  ws_client.js
libshvchainpack/js-export/: README  bint.js  chainpack.js  cpcontext.js  cpon.js  package.json  rpcmessage.js  rpcvalue.js  test.js
libshvchainpack/py/: cp2cp.py  tst_chainpack.py
libshvchainpack/py/chainpack/: chainpack.py  cpcontext.py  cpon.py  rpcclient.py  rpcmessage.py  rpcvalue.py
libshvchainpack/src/: shvchainpackglobal.h  src.pri
libshvchainpack/src/chainpack/: abstractrpcconnection.cpp  abstractrpcconnection.h  abstractstreamreader.cpp  abstractstreamreader.h  abstractstreamreader1.cpp  abstractstreamreader1.h  abstractstreamtokenizer.cpp  abstractstreamtokenizer.h  abstractstreamwriter.cpp  abstractstreamwriter.h  accessgrant.cpp  accessgrant.h  aclmountdef.cpp  aclmountdef.h  aclpassword.cpp  aclpassword.h  aclrole.cpp  aclrole.h  aclrolepaths.cpp  aclrolepaths.h  acluser.cpp  acluser.h  acluserdef.cpp  acluserdef.h  chainpack.cpp  chainpack.h  chainpack.pri  chainpackprotocol.cpp  chainpackprotocol.h  chainpackreader.cpp  chainpackreader.h  chainpackreader1.cpp  chainpackreader1.h  chainpacktokenizer.cpp  chainpacktokenizer.h  chainpackwriter.cpp  chainpackwriter.h  cpon.cpp  cpon.h  cponprotocol.cpp  (+38 more)
libshvchainpack/src/chainpack1/: abstractrpcconnection1.cpp  abstractstreamreader1.cpp  abstractstreamreader1.h  abstractstreamwriter1.cpp  abstractstreamwriter1.h  chainpack1.cpp  chainpack1.h  chainpack1.pri  chainpackreader1.cpp  chainpackreader1.h  chainpackwriter1.cpp  chainpackwriter1.h  cpon1.cpp  cpon1.h  cponreader1.cpp  cponreader1.h  cponwriter1.cpp  cponwriter1.h  exception1.cpp  exception1.h  rpcvalue1.cpp  rpcvalue1.h  utils1.cpp  utils1.h
libshvchainpack/tests/: rpcvalue.cpp  test_accessgrant.cpp  test_chainpack.cpp  test_cpon.cpp  test_crc32.cpp  test_rpcmessage.cpp  test_rpcvalue.cpp
libshvcore/: CMakeLists.txt  libshvcore.pro
libshvcore/src/: assert.h  exception.h  log.h  shvcoreglobal.h  src.pri  string.cpp  string.h  stringview.cpp  stringview.h  utils.cpp  utils.h
libshvcore/src/chainpack/: chainpack.pri  chainpackprotocol.cpp  chainpackprotocol.h  cponprotocol.cpp  cponprotocol.h  jsonprotocol.cpp  jsonprotocol.h  metatypes.cpp  metatypes.h  rpcdriver.cpp  rpcdriver.h  rpcmessage.cpp  rpcmessage.h  rpcvalue.cpp  rpcvalue.h  socketrpcdriver.cpp  socketrpcdriver.h
libshvcore/src/core/: assert.h  core.pri  exception.cpp  exception.h  log.h  shvexception.cpp  shvexception.h  shvlog.cpp  shvlog.h  string.cpp  string.h  stringview.cpp  stringview.h  utils.cpp  utils.h
libshvcore/src/utils/: abstractshvjournal.cpp  abstractshvjournal.h  clioptions.cpp  clioptions.h  crypt.cpp  crypt.h  fileshvjournal.cpp  fileshvjournal.h  fileshvjournal2.cpp  fileshvjournal2.h  memoryshvjournal.cpp  memoryshvjournal.h  patternmatcher.cpp  patternmatcher.h  serviceproviderpath.cpp  serviceproviderpath.h  shvalarm.cpp  shvalarm.h  shvdirtylog.cpp  shvdirtylog.h  shvfilejournal.h  (+37 more)
libshvcore/tests/: test_clioptions.cpp  test_crypt.cpp  test_join_path.cpp  test_shvjournalfilereader.cpp  test_shvlog.cpp  test_shvpath.cpp  test_shvtypeinfo.cpp  test_stringview.cpp  test_utils.cpp
libshvcoreqt/: CMakeLists.txt  libshvcoreqt.pro
libshvcoreqt/src/: exception.cpp  exception.h  log.cpp  log.h  rpc.cpp  rpc.h  shvcoreqtglobal.h  src.pri  utils.cpp  utils.h
libshvcoreqt/tests/: test_join_path.cpp  test_rpc_variant.cpp  test_utils.cpp
libshviotqt/: CMakeLists.txt  libshviotqt.pro
libshviotqt/src/: shviotqtglobal.h  shvnode.cpp  shvnode.h  shvnodetree.cpp  shvnodetree.h  src.pri  utils.cpp  utils.h
libshvvisu/: CMakeLists.txt  libshvvisu.pro  libshvvisu.qrc
libshvvisu/images/: images.qrc
libshvvisu/src/: shvvisuglobal.h  src.pri
(+511 files in other folders)
